--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.2.3"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
@@ -18,6 +19,9 @@
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.1",
     "tailwindcss": "^3.0.7",
-    "typescript": "4.5.4"
+    "typescript": "4.5.4",
+    "@zeit/next-sass": "^1.0.1",
+    "node-sass": "^7.0.1",
+    "sass": "^1.49.9"
   }
 }
