--- a/package.json
+++ b/package.json
@@ -6,22 +6,34 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "latest",
+    "@ant-design/icons": "^4.7.0",
+    "antd": "^3.26.20",
+    "classnames": "^2.3.1",
+    "next": "12.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "styled-components": "^5.2.3"
   },
   "devDependencies": {
+    "@headlessui/react": "^1.5.0",
+    "@heroicons/react": "^1.0.6",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/forms": "^0.5.0",
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
+    "@zeit/next-less": "^1.0.1",
+    "@zeit/next-sass": "^1.0.1",
     "autoprefixer": "^10.4.0",
+    "babel-plugin-import": "^1.13.3",
+    "next-plugin-antd-less": "^1.8.0",
+    "node-sass": "^7.0.1",
     "postcss": "^8.4.5",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^7.4.2",
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.1",
+    "sass": "^1.49.9",
     "tailwindcss": "^3.0.7",
-    "typescript": "4.5.4",
-    "@zeit/next-sass": "^1.0.1",
-    "node-sass": "^7.0.1",
-    "sass": "^1.49.9"
+    "typescript": "4.5.4"
   }
 }
