--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
-    "antd": "^3.26.20",
+    "antd": "^4.19.2",
     "classnames": "^2.3.1",
+    "less": "^4.1.2",
     "next": "12.1.0",
+    "next-compose-plugins": "^2.2.1",
+    "next-plugin-antd-less": "^1.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "styled-components": "^5.2.3"
@@ -21,11 +24,8 @@
     "@tailwindcss/forms": "^0.5.0",
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
-    "@zeit/next-less": "^1.0.1",
-    "@zeit/next-sass": "^1.0.1",
     "autoprefixer": "^10.4.0",
     "babel-plugin-import": "^1.13.3",
-    "next-plugin-antd-less": "^1.8.0",
     "node-sass": "^7.0.1",
     "postcss": "^8.4.5",
     "postcss-flexbugs-fixes": "^5.0.2",
