--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.0",
+    "axios": "^0.26.1",
     "babel-plugin-import": "^1.13.3",
+    "lodash": "^4.17.21",
     "node-sass": "^7.0.1",
     "postcss": "^8.4.5",
     "postcss-flexbugs-fixes": "^5.0.2",
