--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "autoprefixer": "^10.4.0",
     "axios": "^0.26.1",
     "babel-plugin-import": "^1.13.3",
+    "js-cookie": "^3.0.1",
     "lodash": "^4.17.21",
     "node-sass": "^7.0.1",
     "postcss": "^8.4.5",
