--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "next-plugin-antd-less": "^1.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^8.0.0",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
     "styled-components": "^5.2.3"
   },
   "devDependencies": {
